[gd_scene load_steps=8 format=2]

[ext_resource path="res://graphical/Orange Juice.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -540.0
margin_right = 94.0
margin_bottom = 540.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="VBoxContainer" parent="PauseMenu"]
margin_top = 402.0
margin_right = 188.0
margin_bottom = 678.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 30

[node name="PauseMenuTitle" type="Label" parent="PauseMenu/MenuContainer"]
margin_left = 18.0
margin_right = 170.0
margin_bottom = 48.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
text = "Paused"

[node name="ContinueButton" type="Button" parent="PauseMenu/MenuContainer"]
margin_top = 78.0
margin_right = 188.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 2 )
text = "Continue"

[node name="SettingsButton" type="Button" parent="PauseMenu/MenuContainer"]
margin_top = 154.0
margin_right = 188.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 3 )
text = "Settings"

[node name="QuitButton" type="Button" parent="PauseMenu/MenuContainer"]
margin_top = 230.0
margin_right = 188.0
margin_bottom = 276.0
custom_fonts/font = SubResource( 4 )
text = "Quit Game"
[connection signal="show_settings_menu" from="PauseMenu" to="." method="_on_PauseMenu_show_settings_menu"]
[connection signal="pressed" from="PauseMenu/MenuContainer/ContinueButton" to="PauseMenu" method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="PauseMenu/MenuContainer/SettingsButton" to="PauseMenu" method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="PauseMenu/MenuContainer/QuitButton" to="PauseMenu" method="_on_QuitButton_pressed"]
